# soundgraph

./: setup.cfg
notebooks/: Tutorial.ipynb  example.ipynb
notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb
src/soundgraph/: audio_engine.py  graph.py  utils.py
src/soundgraph.egg-info/: PKG-INFO  SOURCES.txt
src/soundgraph/nodes/: __init__.py  midi.py  oscillator.py
