[metadata]
name = soundgraph
version = 0.0.1
author = Leonardo Pepino
author_email = leonardodpepino@gmail.com
description = Realtime interactive audio processing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src